# fastapi-sqlalchemy-slowness

./: README.md  alembic.ini  pyproject.toml  run_test.py
alembic/: env.py
alembic/versions/: 2024-08-29_initial_migration.py  2024-08-29_populate_dummy_data.py
src/fastapi_sqlalchemy_slowness/: database.py  dependencies.py  main.py  models.py
