[project]
name = "fastapi-sqlalchemy-slowness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.2",
    "alembic>=1.13.2",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start = "fastapi_sqlalchemy_slowness.main:app"
